<resources>
    <string name="alias">EDEPA</string>
    <string name="app_name">EDEPA</string>
    <string name="app_title">EDEPA</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_exit">Exit</string>
    <string name="nav_news">News</string>
    <string name="nav_about">About</string>
    <string name="nav_info">Information</string>
    <string name="nav_more">More</string>
    <string name="nav_people">People</string>
    <string name="nav_menu">Main menu</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_palette">Color palette</string>
    <string name="nav_subsection">Subsection</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_exit_and_signout">Sign out</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_getstarted">Get Started</string>
    <string name="text_to">to</string>
    <string name="text_from">From</string>
    <string name="text_end">End</string>
    <string name="text_date">Date</string>
    <string name="text_start">Start</string>
    <string name="text_talk">Talk</string>
    <string name="text_curse">Taller</string>
    <string name="text_edepa">Feria EDEPA</string>
    <string name="text_conference">Conference</string>
    <string name="text_people">People</string>
    <string name="nav_ongoing">Ongoing</string>
    <string name="text_abstract">Abstract</string>
    <string name="text_readmore">READ MORE</string>
    <string name="text_location">Location</string>
    <string name="text_input">Write here</string>
    <string name="text_exhibitor">Expositores</string>
    <string name="text_presentation">Presentation</string>
    <string name="text_language">Language</string>
    <string name="text_username">Username</string>
    <string name="text_username_help">Press to choose the name you will use in the chat</string>
    <string name="text_favorite">Favorite</string>
    <string name="text_mark_favorite">Mark as favorite</string>
    <string name="text_unmark_favorite">Remove from favorites</string>
    <string name="text_marked_as_favorite">Added to favorites</string>
    <string name="text_unmarked_as_favorite">Removed from favorites</string>
    <string name="text_notifications">Notifications</string>
    <string name="text_notifications_enabled">Notifications enabled</string>
    <string name="text_turned_on_notifications">Notifications enabled</string>
    <string name="text_notifications_disabled">Notifications disabled</string>
    <string name="text_turned_off_notifications">Notifications disabled</string>
    <string name="text_notifications_help">You need an internet connection to receive notifications</string>
    <string name="copy">copy</string>
    <string name="paste">paste</string>
    <string name="replace">replace</string>
    <string name="text_save">Save</string>
    <string name="text_search">Search</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_map">Map</string>
    <string name="text_loading">Loading</string>
    <string name="text_events">Events</string>
    <string name="text_about">About</string>
    <string name="text_confirm">OK</string>
    <string name="text_version">Version 1.0.0</string>
    <string name="text_press_here">Press here</string>
    <string name="text_not_available">Not available</string>
    <string name="text_connect_with_us">Contact Us</string>
    <string name="text_about_readmore">Touch for more details</string>
    <string name="text_language_help">Press to change the language. Restart required.</string>
    <string name="text_username_changed">Username has been changed</string>
    <string name="text_language_changed">You want to restart now to change the language?</string>
    <string name="text_about_description">
        Application to be aware of EDEPA.
        Developed by Instituto Tecnológico de Costa Rica students.
    </string>
    <string name="text_description">Description</string>
    <string name="text_choose_color">Choose a color</string>
    <string name="text_choose_theme">Choose a theme</string>
    <string name="text_without_favorites">You have\nnot favorites</string>
    <string name="text_without_ongoing">No ongoing events</string>
    <string name="text_you_need_internet">Necesitas conexión a internet para sincronizar por primera vez</string>
    <string name="test_dummy">Dummy</string>
    <string name="test_app_time">8:00am</string>
    <string name="test_type">Conferencia</string>
    <string name="text_anonymous">Anonymous</string>
    <string name="test_location">Centro de las Artes</string>
    <string name="test_app_date_end">18/12/2018</string>
    <string name="test_app_date_start">15/12/2018</string>
    <string name="test_exhibitor">Nombre Apellido</string>
    <string name="text_no_connection">You are offline</string>
    <string name="test_pressthepoint">toca el punto</string>
    <string name="test_app_range_time">De 8:00am a 11:00am</string>
    <string name="test_university">Universidad de Costa Rica</string>
    <string name="text_new_username">New username</string>
    <string name="test_invitation">La escuela de matemática te invita este 2018 al:</string>
    <string name="test_event">"Esto es un nombre lo suficientemente largo para cubrir dos líneas"</string>
    <string name="test_congress">Encuentro sobre la Didáctica de la Estadística, Probabilidad y el Análisis de datos</string>
    <string name="text_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ullamcorper aliquet dictum. Maecenas in imperdiet dui.</string>
    <string name="text_atelier">Atelier</string>
    <string name="text_fair">Feria-EDEPA</string>
    <string name="text_without_description">No description</string>
    <string name="text_today">Today</string>
    <string name="search_title">Search</string>
    <string name="text_retry">RETRY</string>
    <string name="text_alarm">Alarm will vibrate at </string>
    <string name="text_remainder">Remainder</string>
    <string name="text_block">Block</string>
    <string name="text_without_events">No events available</string>
    <string name="date_util_term_less">less than</string>
    <string name="date_util_term_a">a</string>
    <string name="date_util_term_an">an</string>
    <string name="date_util_unit_second">second</string>
    <string name="date_util_unit_seconds">seconds</string>
    <string name="date_util_unit_minute">minute</string>
    <string name="date_util_unit_minutes">minutes</string>
    <string name="date_util_unit_hour">hour</string>
    <string name="date_util_unit_hours">hours</string>
    <string name="date_util_unit_day">day</string>
    <string name="date_util_unit_days">days</string>
    <string name="date_util_unit_month">month</string>
    <string name="date_util_unit_months">months</string>
    <string name="date_util_unit_year">year</string>
    <string name="date_util_unit_years">years</string>
    <string name="date_util_prefix_lt">less than a</string>
    <string name="date_util_prefix_about">about</string>
    <string name="date_util_prefix_over">over</string>
    <string name="date_util_prefix_almost">almost</string>
    <string name="date_util_suffix">ago</string>
    <string name="date_util_just_now">just now</string>
    <string name="text_single_viewed">viewed</string>
    <string name="text_viewed">viewed</string>
    <string name="text_not_viewed">no viewed</string>
    <string name="text_bye">Bye bye!</string>
    <string name="text_msg_sent">Mensaje enviado</string>
    <string name="text_delete">borrar</string>
    <string name="text_selected">seleccionados</string>
    <string name="text_selected_single">seleccionado</string>
    <string name="arroba">\@</string>
    <string name="text_image">Image</string>
    <string name="text_error">Error inesperado</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_update_titles">
        <item>1 second</item>
        <item>5 seconds</item>
        <item>15 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>60 minutes</item>
    </string-array>
    <string-array name="pref_update_values">
        <item>1000</item>
        <item>5000</item>
        <item>15000</item>
        <item>30000</item>
        <item>60000</item>
        <item>300000</item>
        <item>450000</item>
        <item>900000</item>
        <item>1800000</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_language_titles">
        <item>Español</item>
        <item>Ingles</item>
    </string-array>
    <string-array name="pref_language_values">
        <item>es</item>
        <item>en</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="press_to_preview">Presiona para visualizar</string>
    <string name="add_to_calendar">Agregar al calendario</string>
    <string name="text_download_file">Presione para descargar el archivo</string>
    <string name="text_download_complete">Descarga completa</string>
    <string name="text_download_error">Error al descargar</string>
    <string name="text_download_started">La descarga ha iniciado</string>
    <string name="text_information">Información</string>
    <string name="text_close">Cerrar</string>
    <string name="text_accept">Aceptar</string>
    <string name="text_success">Éxito</string>
    <string name="text_warning">Advertencia</string>
    <string name="text_success_publication">Noticia publicada</string>
    <string name="text_error_publication">Error al realizar la publicación</string>
    <string name="text_warning_publication">Advertencia</string>
    <string name="text_warning_publication_content">La noticia ha sido guardada. Se publicará
        cuando se retome la conexión a internet</string>
    <string name="text_title">Título</string>
    <string name="text_content">Contenido</string>
    <string name="post_new">Publicar noticia</string>
    <string name="upload_image">Subir imagen</string>
    <string name="text_warning_delete_new">Si borrar la noticia los demás usuario ya no podrán accederla</string>
    <string name="text_person">Nombre completo</string>
    <string name="text_person_description">Descripción</string>
    <string name="text_person_description_example">Ej. Universidad o País</string>
    <string name="add_person">Agregar persona</string>
    <string name="text_view_mod">Tipo de vista</string>
</resources>