<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_infomation"
            android:icon="@drawable/ic_information"
            android:title="@string/nav_info" />
        <item
            android:id="@+id/nav_agenda"
            android:icon="@drawable/ic_favorite"
            android:title="@string/nav_diary" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule"
            android:title="@string/nav_schedule" />
        <item
            android:id="@+id/nav_ongoing"
            android:icon="@drawable/ic_clock"
            android:title="@string/text_ongoing" />
        <item
            android:id="@+id/nav_people"
            android:icon="@drawable/ic_people"
            android:title="@string/nav_people" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/nav_news" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/nav_chat" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/nav_exit" />
    </group>

</menu>
