<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="imagisoft.rommie.ConfigView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_default"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="85"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/text_notifications"
                android:textSize="@dimen/font_big" />

            <Switch
                android:id="@+id/switch_notifications"
                android:layout_width="0dp"
                android:layout_weight="15"
                android:layout_height="wrap_content"
                android:checked="true"/>

        </LinearLayout>

        <TextView
            android:id="@+id/text_presentation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_medium"
            android:textSize="@dimen/font_smallest"
            android:text="@string/text_notifications_help" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_line"
            android:layout_marginBottom="@dimen/space_medium"
            android:background="@color/app_light_detail" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/text_username"
            android:textSize="@dimen/font_big" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_medium"
            android:textSize="@dimen/font_smallest"
            android:text="@string/text_username_help" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_medium"
            app:cardCornerRadius="1dp"
            app:cardElevation="1dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:textSize="@dimen/font_small"
                android:hint="@string/text_input"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/text_anonymous"/>

        </android.support.v7.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_line"
            android:layout_marginBottom="@dimen/space_medium"
            android:background="@color/app_light_detail" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/text_language"
            android:textSize="@dimen/font_big" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_medium"
            android:textSize="@dimen/font_smallest"
            android:text="@string/text_username_help" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_espanish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Español" />

            <RadioButton
                android:id="@+id/radio_english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/app_primary_font"
                android:text="English" />

        </RadioGroup>

    </LinearLayout>

</ScrollView>
