<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/space_default"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_small"
            android:text="@string/text_title"
            android:fontFamily="sans-serif-light"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/space_default"
            app:cardUseCompatPadding="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_input_title"
                android:hint="@string/text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:paddingLeft="@dimen/space_default"
                android:paddingRight="@dimen/space_default"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:tag=":aesthetic_ignore"/>

        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_small"
            android:text="@string/text_content"
            android:fontFamily="sans-serif-light"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/space_default"
            app:cardUseCompatPadding="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_input_content"
                android:hint="@string/text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:minHeight="@dimen/detail_backdrop"
                android:backgroundTint="#00FFFFFF"
                android:padding="@dimen/space_default"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:tag=":aesthetic_ignore"/>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_small"
            android:text="@string/upload_image"
            android:fontFamily="sans-serif-light"/>

        <Button
            android:id="@+id/publish_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/edepa_primary"
            android:elevation="2dp"
            android:text="@string/post_new"
            android:textColor="@color/app_accent_font"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>