<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_schedule"
        android:title="@string/nav_schedule"
        android:icon="@drawable/ic_schedule"
        app:iconTint="@color/app_white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_favorites"
        android:title="@string/nav_favorites"
        android:icon="@drawable/ic_star"
        app:iconTint="@color/app_white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_ongoing"
        android:title="@string/nav_ongoing"
        android:icon="@drawable/ic_clock"
        app:iconTint="@color/app_white"
        app:showAsAction="ifRoom" />

    <!--<item-->
        <!--android:id="@+id/nav_infomation"-->
        <!--android:icon="@drawable/ic_info"-->
        <!--android:title="@string/nav_info"-->
        <!--app:iconTint="@accent/app_white"-->
        <!--app:showAsAction="ifRoom" />-->

    <!--<item-->
        <!--android:id="@+id/nav_schedule"-->
        <!--android:icon="@drawable/ic_schedule"-->
        <!--android:title="@string/nav_schedule"-->
        <!--app:iconTint="@accent/app_white"-->
        <!--app:showAsAction="ifRoom" />-->

    <!--<item-->
        <!--android:id="@+id/nav_people"-->
        <!--android:icon="@drawable/ic_people"-->
        <!--android:title="@string/nav_people"-->
        <!--app:iconTint="@accent/app_white"-->
        <!--app:showAsAction="ifRoom" />-->

    <!--<item-->
        <!--android:id="@+id/nav_news"-->
        <!--android:icon="@drawable/ic_news"-->
        <!--android:title="@string/nav_news"-->
        <!--app:iconTint="@accent/app_white"-->
        <!--app:showAsAction="ifRoom" />-->

    <!--<item-->
        <!--android:id="@+id/nav_chat"-->
        <!--android:icon="@drawable/ic_chat"-->
        <!--android:title="@string/nav_chat"-->
        <!--app:iconTint="@accent/app_white"-->
        <!--app:showAsAction="ifRoom" />-->

</menu>