<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/tools"
    android:scrollbars="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/space_default"
        android:orientation="vertical">

        <com.mklimek.circleinitialsview.CircleInitialsView
            android:id="@+id/avatar_view"
            android:layout_width="@dimen/avatar_biggest_width"
            android:layout_height="@dimen/avatar_biggest_height"
            android:layout_margin="@dimen/space_default"
            android:layout_gravity="center_horizontal"
            custom:circleInitialsView_text="Adam Smith"
            custom:circleInitialsView_textColor="#FFF"
            custom:circleInitialsView_textSize="26sp"
            custom:circleInitialsView_backgroundColor="@color/app_accent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_small"
            android:text="@string/text_person"
            android:fontFamily="sans-serif-light"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/space_default"
            app:cardUseCompatPadding="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_input_complete_name"
                android:hint="@string/text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:paddingLeft="@dimen/space_default"
                android:paddingRight="@dimen/space_default"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:tag=":aesthetic_ignore"/>

        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_person_description"
            android:fontFamily="sans-serif-light"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_small"
            android:text="@string/text_person_description_example"
            android:fontFamily="sans-serif-light"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/space_default"
            app:cardUseCompatPadding="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_input_title"
                android:hint="@string/text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:paddingLeft="@dimen/space_default"
                android:paddingRight="@dimen/space_default"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:tag=":aesthetic_ignore"/>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/add_person_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/edepa_primary"
            android:elevation="2dp"
            android:text="@string/add_person"
            android:textColor="@color/app_accent_font"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>